--- a/style.css
+++ b/style.css
@@ -95,3 +95,22 @@ main {
     flex-direction: column;
   }
 }
+
+.cardNav {
+  margin: 1rem;
+  padding: 0.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #000000;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  max-width: 500px;
+}
+
+.cardNav:hover,
+.cardNav:focus,
+.cardNav:active{
+  color: #0070f3;
+  border-color: #0070f3;
+}
