--- a/style.css
+++ b/style.css
@@ -96,6 +96,18 @@ main {
   }
 }
 
+.cardNon{
+  margin: 1rem;
+  padding: 0.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  max-width: 800px;
+}
+
 .cardNav {
   margin: 1rem;
   padding: 0.5rem;
@@ -113,4 +125,10 @@ main {
 .cardNav:active{
   color: #0070f3;
   border-color: #0070f3;
+}
+
+.headerStyle {
+  background-color: beige;
+  border-color: #000000;
+  
 }
